Fix horizontal scroll with overflow-x: hidden on body. Also added centering of gb-container-block when using full width sections and restricted width containers

--- a/style.css
+++ b/style.css
@@ -200,6 +200,7 @@ body {
 	font-weight: 400;
 	line-height: calc(150%);
 	margin: 0;
+	overflow-x: hidden; /* This fixes horizontal scroll when using full width settings on blocks*/
 }
 
 button,
